<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_2">

    <TextView
        android:id="@+id/tv_layout_item_parameter_key"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:gravity="center"
        android:text="@string/key"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_layout_item_parameter_key"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:background="@android:color/transparent"
        android:hint="@string/enter_key"
        android:inputType=""
        android:textSize="@dimen/sp_16"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/tv_layout_item_parameter_key"
        app:layout_constraintEnd_toStartOf="@+id/iv_layout_item_parameter"
        app:layout_constraintStart_toEndOf="@+id/tv_layout_item_parameter_key"
        app:layout_constraintTop_toTopOf="@+id/tv_layout_item_parameter_key" />

    <TextView
        android:id="@+id/tv_layout_item_parameter_value"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_40"
        android:gravity="center"
        android:text="@string/value"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_layout_item_parameter_key" />

    <EditText
        android:id="@+id/et_layout_item_parameter_value"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:background="@android:color/transparent"
        android:hint="@string/enter_value"
        android:inputType=""
        android:textSize="@dimen/sp_16"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBottom_toBottomOf="@id/tv_layout_item_parameter_value"
        app:layout_constraintEnd_toStartOf="@+id/iv_layout_item_parameter"
        app:layout_constraintStart_toEndOf="@+id/tv_layout_item_parameter_value"
        app:layout_constraintTop_toTopOf="@id/tv_layout_item_parameter_value" />

    <ImageView
        android:id="@+id/iv_layout_item_parameter"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:padding="@dimen/dp_6"
        android:src="@drawable/ic_item_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_layout_item_parameter_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:layout_marginTop="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@id/tv_layout_item_parameter_value"
        android:background="@color/colorGay"/>

</android.support.constraint.ConstraintLayout>